[tool.poetry]
name = "peg"
version = "0.1.0"
description = ""
authors = ["dhilipsiva <dhilipsiva@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.4.0"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^22.6.0"
isort = "^5.10.1"
pip = "^22.1.2"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
