[tool.poetry]
name = "peg"
version = "0.1.0"
description = ""
authors = ["dhilipsiva <dhilipsiva@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
parsimonious = "^0.9.0"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.4.0"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^22.6.0"
isort = "^5.10.1"
pip = "^22.1.2"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
